:art: Finalize perturbation use-case
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "curate.validate()\n",
     "\n",
-    "# We found a mix of ensembl IDs and gene symbols in the var_index -> get all gene symbols to ensembl IDs\n",
+    "# Map mix of ensembl IDs and gene symbols in the var_index to ensembl IDs\n",
     "gene_mapper = bt.Gene.standardize(\n",
     "    curate.non_validated[\"var_index\"],\n",
     "    field=\"symbol\",\n",
@@ -144,7 +144,6 @@
     ")\n",
     "adata.var.index = adata.var.index.map(lambda x: gene_mapper.get(x, x))\n",
     "\n",
-    "# Since the focus of this guide is the curation of perturbations, we assume that we got the correct names by searching on LaminHub\n",
     "adata.obs[\"disease\"] = adata.obs[\"disease\"].cat.rename_categories(\n",
     "    {\n",
     "        \"colon/colorectal cancer\": \"colorectal cancer\",\n",
@@ -161,12 +160,11 @@
     "    adata.obs[\"cell_line\"], field=\"name\"\n",
     ")\n",
     "\n",
-    "adata = adata[:, ~adata.var.index.isin(curate.non_validated[\"var_index\"])].copy()\n",
-    "\n",
     "adata.obs[\"perturbation\"] = adata.obs[\"perturbation\"].cat.rename_categories(\n",
     "    lambda category: category.lower()\n",
     ")\n",
     "\n",
+    "adata = adata[:, ~adata.var.index.isin(curate.non_validated[\"var_index\"])].copy()\n",
     "```\n",
     "\n",
     ":::"
@@ -175,7 +173,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "categoricals = {\n",
@@ -191,38 +193,16 @@
     "sources = {\n",
     "    \"DepMap_ID\": bt.Source.filter(name=\"depmap\").one(),\n",
     "    \"cell_line\": bt.Source.filter(name=\"depmap\").one(),\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "curate = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals,\n",
     "    organism=\"human\",\n",
     "    sources=sources,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "curate.validate()"
    ]
   },
@@ -275,33 +255,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The {mod}`wetlab` schema BLA"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Genetic treatments"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Genetic treatme"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curate the direct targets for simplicity.\n",
+    "The {mod}`wetlab` schema has th major components:\n",
     "\n",
-    "1. **sgGPX4-1**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
-    "2. **sgGPX4-2**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
-    "3. **sgLACZ**: **Gene/Protein** - LACZ (β-galactosidase)\n",
-    "4. **sgOR2J2**: **Gene/Protein** - OR2J2 (Olfactory receptor family 2 subfamily J member 2)"
+    "1. {class}`wetlab.EnvironmentalTreatment` to model perturbations such as heat, {class}`wetlab.GeneticTreatment` to model perturbations such as CRISPR, and {class}`wetlab.CompoundTreatment` to model, for example, drugs. Several treatments together can be modeled using {class}`wetlab.CombinationTreatment`.\n",
+    "2. Known targets of treatments can be modeled through {class}`wetlab.TreatmentTarget` which can be one or several of {class}`bionty.Gene`, {class}`bionty.Protein`, or {class}`bionty.Pathway` records."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Genetic perturbations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Genetic perturbations can be modeled in two ways depending on the available information by populating a:\n",
+    "\n",
+    "1. {class}`wetlab.GeneticTreatment` record if the system such as the guide RNA name or sequence, the on- and off-target scores are known.\n",
+    "2. {class}`wetlab.TreatmentTarget` record that links to {class}`bionty.Gene` records."
    ]
   },
   {
@@ -331,6 +305,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{dropdown} What are the associated targets?\n",
+    "\n",
+    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curate the direct targets for simplicity.\n",
+    "\n",
+    "1. **sgGPX4-1**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
+    "2. **sgGPX4-2**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
+    "3. **sgLACZ**: **Gene/Protein** - LACZ (β-galactosidase)\n",
+    "4. **sgOR2J2**: **Gene/Protein** - OR2J2 (Olfactory receptor family 2 subfamily J member 2)\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the perturbation metadata contains the guide RNA names, we model the genetic perturbations using both {class}`wetlab.GeneticTreatment` and {class}`wetlab.TreatmentTarget`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We disable searching for related names to keep the output minimal\n",
+    "ln.settings.creation.search_names = False"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -344,9 +351,9 @@
     "    system=\"CRISPR Cas9\",\n",
     "    name=f\"sgGPX4-1 knockdown\",\n",
     ").save()\n",
-    "gpx4_prot = bt.Protein.from_source(gene_symbol=\"GPX4\", organism=\"human\")[0].save()\n",
+    "gpx4_gene = bt.Gene.from_source(symbol=\"GPX4\", organism=\"human\").save()\n",
     "gpx4_target = wl.TreatmentTarget(name=\"Glutathione Peroxidase 4\").save()\n",
-    "gpx4_target.proteins.add(gpx4_prot)\n",
+    "gpx4_target.genes.add(gpx4_gene)\n",
     "sgGPX4_1_treatment.targets.add(gpx4_target)"
    ]
   },
@@ -401,13 +408,13 @@
     "    system=\"CRISPR Cas9\",\n",
     "    name=f\"or2j2 knockdown\",\n",
     ").save()\n",
-    "or2j2_prot = bt.Protein.from_source(\n",
-    "    name=\"Olfactory receptor 2J2\", organism=\"human\"\n",
+    "or2j2_gene = bt.Gene.from_source(\n",
+    "    symbol=\"or2j2\", organism=\"human\"\n",
     ").save()\n",
     "or2j2_target = wl.TreatmentTarget(\n",
     "    name=\"Olfactory receptor family 2 subfamily J member 2\"\n",
     ").save()\n",
-    "or2j2_target.proteins.add(or2j2_prot)\n",
+    "or2j2_target.genes.add(or2j2_gene)\n",
     "sgor2j2_treatment.targets.add(or2j2_target)"
    ]
   },
@@ -429,14 +436,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compound treatments"
+    "### Compound perturbations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although the targets are known for many compounds, we skip annotating them here to keep the guide on point."
+    "Although the targets are known for many compounds, we skip annotating them here to keep the guide brief."
    ]
   },
   {
@@ -447,6 +454,8 @@
     ]
    },
    "source": [
+    ":::{dropdown} What are the compound targets?\n",
+    "\n",
     "1. **AZD5591**: Unknown\n",
     "2. **Afatinib**: **Proteins** - EGFR (Epidermal Growth Factor Receptor), HER2 (Human Epidermal growth factor Receptor 2)\n",
     "3. **BRD3379**: Unknown\n",
@@ -460,7 +469,9 @@
     "11. **Prexasertib**: **Protein** - CHK1 (Checkpoint kinase 1)\n",
     "12. **Taselisib**: **Protein/Pathway** - PI3K (Phosphoinositide 3-kinase)\n",
     "13. **Trametinib**: **Proteins** - MEK1/2 (Mitogen-Activated Protein Kinase Kinase 1 and 2)\n",
-    "14. **control**: Not applicable"
+    "14. **control**: Not applicable\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -503,9 +514,6 @@
    },
    "outputs": [],
    "source": [
-    "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(\n",
-    "    lambda category: category.lower()\n",
-    ")\n",
     "compounds = wl.Compound.from_values(drug_metadata[\"perturbation\"], field=\"name\")"
    ]
   },
@@ -564,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set relationships"
+    "## Register curated artifact"
    ]
   },
   {
