--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -11,9 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this guide we demonstrate how to annotate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) in great detail.\n",
-    "To speed up processing, we load a downsampled version of the original dataset.\n",
-    "We make use of the {mod}`wetlab` schema to enable efficient search for specific treatment targets and their associated perturbations."
+    "In this guide we demonstrate how to annotate a complex, real world perturbation dataset [McFarland et al. 2020](https://www.nature.com/articles/s41467-020-17440-w) using the {mod}`wetlab` schema.\n",
+    "To speed up processing, we load a downsampled version (1000 cells) of the original dataset."
    ]
   },
   {
