:art: Initial feedback
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -50,15 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata = ds.anndata_mcfarland()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -66,6 +57,7 @@
    },
    "outputs": [],
    "source": [
+    "adata = ds.anndata_mcfarland()\n",
     "adata.obs.head(3)"
    ]
   },
@@ -162,6 +154,7 @@
     "adata.obs[\"perturbation\"] = adata.obs[\"perturbation\"].cat.rename_categories(\n",
     "    lambda category: category.lower()\n",
     ")\n",
+    "adata.obs = adata.obs.rename(columns={\"DepMap_ID\": \"depmap_id\"})\n",
     "\n",
     "adata = adata[:, ~adata.var.index.isin(curate.non_validated[\"var_index\"])].copy()\n",
     "```\n",
