--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -173,7 +173,7 @@
    "outputs": [],
    "source": [
     "categoricals = {\n",
-    "    \"DepMap_ID\": bt.CellLine.ontology_id,\n",
+    "    \"depmap_id\": bt.CellLine.ontology_id,\n",
     "    \"cell_line\": bt.CellLine.name,\n",
     "    \"disease\": bt.Disease.name,\n",
     "    \"organism\": bt.Organism.name,\n",
@@ -183,7 +183,7 @@
     "    \"tissue_type\": ln.ULabel.name,\n",
     "}\n",
     "sources = {\n",
-    "    \"DepMap_ID\": bt.Source.filter(name=\"depmap\").one(),\n",
+    "    \"depmap_id\": bt.Source.filter(name=\"depmap\").one(),\n",
     "    \"cell_line\": bt.Source.filter(name=\"depmap\").one(),\n",
     "}\n",
     "\n",
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "curate.add_validated_from_var_index()\n",
-    "curate.add_validated_from(\"DepMap_ID\")\n",
+    "curate.add_validated_from(\"depmap_id\")\n",
     "curate.add_new_from(\"perturbation_type\")\n",
     "curate.add_new_from(\"sex\")\n",
     "curate.add_new_from(\"time\")\n",
@@ -326,7 +326,7 @@
    "outputs": [],
    "source": [
     "# We disable searching for related names to keep the output minimal\n",
-    "ln.settings.creation.search_names = False"
+    "# ln.settings.creation.search_names = False"
    ]
   },
   {
@@ -339,89 +339,22 @@
    },
    "outputs": [],
    "source": [
-    "sgGPX4_1_treatment = wl.GeneticTreatment(\n",
-    "    system=\"CRISPR Cas9\",\n",
-    "    name=f\"sgGPX4-1 knockdown\",\n",
-    ").save()\n",
-    "gpx4_gene = bt.Gene.from_source(symbol=\"GPX4\", organism=\"human\").save()\n",
-    "gpx4_target = wl.TreatmentTarget(name=\"Glutathione Peroxidase 4\").save()\n",
-    "gpx4_target.genes.add(gpx4_gene)\n",
-    "sgGPX4_1_treatment.targets.add(gpx4_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "sgGPX4_2_treatment = wl.GeneticTreatment(\n",
-    "    system=\"CRISPR Cas9\",\n",
-    "    name=f\"sgGPX4-2 knockdown\",\n",
-    ").save()\n",
-    "sgGPX4_2_treatment.targets.add(gpx4_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "sglacz_treatment = wl.GeneticTreatment(\n",
-    "    system=\"CRISPR Cas9\",\n",
-    "    name=f\"sgLACZ knockdown\",\n",
-    ").save()\n",
-    "lacz_prot = bt.Protein.from_source(name=\"beta-galactosidase\", organism=\"human\").save()\n",
-    "lacz_target = wl.TreatmentTarget(name=\"beta-galactosidase\").save()\n",
-    "lacz_target.proteins.add(lacz_prot)\n",
-    "sglacz_treatment.targets.add(lacz_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "sgor2j2_treatment = wl.GeneticTreatment(\n",
-    "    system=\"CRISPR Cas9\",\n",
-    "    name=f\"or2j2 knockdown\",\n",
-    ").save()\n",
-    "or2j2_gene = bt.Gene.from_source(\n",
-    "    symbol=\"or2j2\", organism=\"human\"\n",
-    ").save()\n",
-    "or2j2_target = wl.TreatmentTarget(\n",
-    "    name=\"Olfactory receptor family 2 subfamily J member 2\"\n",
-    ").save()\n",
-    "or2j2_target.genes.add(or2j2_gene)\n",
-    "sgor2j2_treatment.targets.add(or2j2_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genetic_treatments = [\n",
-    "    sgGPX4_1_treatment,\n",
-    "    sgGPX4_2_treatment,\n",
-    "    sgGPX4_1_treatment,\n",
-    "    sgor2j2_treatment,\n",
-    "]"
+    "treatments = [\n",
+    "    (\"sgGPX4-1\", \"GPX4\", \"Glutathione Peroxidase 4\"),\n",
+    "    (\"sgGPX4-2\", \"GPX4\", \"Glutathione Peroxidase 4\"),\n",
+    "    (\"sgor2j2\", \"or2j2\", \"Olfactory receptor family 2 subfamily J member 2\"),\n",
+    "    (\"sgLACZ\", \"lacz\", \"beta-galactosidase control\"),  # Control from E. coli\n",
+    "]\n",
+    "organism = bt.Organism.lookup().human\n",
+    "\n",
+    "genetic_treatments = []\n",
+    "for name, symbol, target_name in treatments:\n",
+    "    treatment = wl.GeneticTreatment(system=\"CRISPR KO\", name=name).save()\n",
+    "    gene = bt.Gene.from_source(symbol=symbol, organism=organism).save() if symbol != \"lacz\" else bt.Gene(symbol=symbol, organism=organism).save()\n",
+    "    target = wl.TreatmentTarget(name=target_name).save()\n",
+    "    target.genes.add(gene)\n",
+    "    treatment.targets.add(target)\n",
+    "    genetic_treatments.append(treatment)"
    ]
   },
   {
@@ -529,7 +462,12 @@
     "    \"taselisib\",\n",
     "]:\n",
     "    compounds.append(wl.Compound(name=missing))\n",
-    "ln.save(compounds)"
+    "ln.save(compounds)\n",
+    "\n",
+    "# We found a synonym for jq1. Let's use the correct name for the metadata\n",
+    "drug_metadata.loc[:, \"perturbation\"] = pd.Categorical(\n",
+    "    drug_metadata[\"perturbation\"].cat.rename_categories({\"jq1\": wl.Compound.search(\"jq1\").one().name})\n",
+    ")"
    ]
   },
   {
@@ -548,8 +486,7 @@
     "\n",
     "compound_treatments = []\n",
     "for _, row in unique_treatments.iterrows():\n",
-    "    val_to_search = row[\"perturbation\"]\n",
-    "    compound = wl.Compound.search(val_to_search).first()\n",
+    "    compound = wl.Compound.get(name=row[\"perturbation\"])\n",
     "    treatment = wl.CompoundTreatment(\n",
     "        name=compound.name,\n",
     "        concentration=row[\"dose_value\"],\n",
