--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -23,15 +23,8 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import bionty as bt\n",
+    "\n",
     "ln.context.uid = \"wukchS8V976U0000\"\n",
     "ln.context.track()"
    ]
@@ -53,7 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bt.CellMarker.df().head()"
@@ -69,7 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "bt.CellMarker.search(\"PD-1\").df().head(2)"
@@ -85,7 +86,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "markers = bt.CellMarker.lookup()\n",
@@ -109,7 +114,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "panels_with_cd8 = ln.FeatureSet.filter(cell_markers=markers.cd8).all()"
@@ -118,7 +127,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Artifact.filter(feature_sets__in=panels_with_cd8).df()"
@@ -150,7 +163,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()"
@@ -159,7 +176,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "shared_markers = artifacts[0].features[\"var\"] & artifacts[1].features[\"var\"]\n",
