:art: Further cell tag fixes
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -95,7 +95,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.context.uid = \"eNef4Arw8nNM0000\"\n",
@@ -105,7 +109,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.get(description=\"anndata with obs\")\n",
@@ -123,7 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = artifact.open()\n",
@@ -141,7 +153,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "cell_types = artifact.cell_types.all().lookup(return_field=\"name\")\n",
@@ -159,7 +175,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "subset_obs = adata.obs.cell_type.isin(\n",
@@ -170,7 +190,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata_subset = adata[subset_obs]\n",
@@ -180,7 +204,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata_subset.obs[[\"cell_type\", \"disease\"]].value_counts()"
@@ -234,7 +262,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact.describe()"
@@ -258,7 +290,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "cell_types = bt.CellType.lookup()"
@@ -267,7 +303,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "my_subset = ln.Artifact.filter(\n",
@@ -277,15 +317,7 @@
     "        cell_types.hematopoietic_stem_cell,\n",
     "        cell_types.t_cell,\n",
     "    ],\n",
-    ").first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").first()\n",
     "my_subset"
    ]
   },
@@ -338,8 +370,8 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete --force analysis-usecase\n",
-    "!rm -r ./analysis-usecase"
+    "!rm -r ./analysis-usecase\n",
+    "!lamin delete --force analysis-usecase"
    ]
   }
  ],
