--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -618,8 +618,8 @@
    "outputs": [],
    "source": [
     "!lamin login testuser1\n",
-    "!lamin delete --force mydata\n",
-    "!rm -r ./mydata"
+    "!rm -r ./mydata\n",
+    "!lamin delete --force mydata"
    ]
   }
  ],
