--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -43,7 +43,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
