--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -97,7 +97,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = ln.core.datasets.anndata_suo22_Visium10X()\n",
