:art: Fix pandas warning and more clel tags
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -45,14 +45,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "from pathlib import Path\n",
     "import bionty as bt\n",
     "import pandas as pd\n",
-    "import anndata as ad"
+    "import anndata as ad\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -112,7 +116,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.context.uid = \"s5V0dNMVwL9i0000\"\n",
@@ -129,7 +137,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.get(description=\"Merged Bulk RNA counts\")"
@@ -138,7 +150,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "df = artifact.load()"
@@ -156,7 +172,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "df"
@@ -172,11 +192,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "df = df.T\n",
-    "\n",
     "df"
    ]
   },
@@ -192,7 +215,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "var = pd.DataFrame({\"gene_name\": df.loc[\"gene_name\"].values}, index=df.loc[\"gene_id\"])"
@@ -201,7 +228,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "var.head()"
@@ -211,18 +242,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's create an AnnData:"
+    "Now, let's create an AnnData object:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# we're also fixing the datatype here, which was string in the tsv\n",
     "adata = ad.AnnData(df.iloc[2:].astype(\"float32\"), var=var)\n",
-    "\n",
     "adata"
    ]
   },
@@ -236,7 +270,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata.to_df()"
@@ -283,7 +321,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# also register the 2 non-validated genes obtained from Bionty\n",
@@ -300,7 +342,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "efs = bt.ExperimentalFactor.lookup()\n",
@@ -311,7 +357,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curated_file = ln.Artifact.from_anndata(\n",
@@ -350,7 +400,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curated_file.features._add_set_from_anndata(var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\")"
@@ -373,7 +427,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curated_file.describe()"
@@ -396,7 +454,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Artifact.df()"
@@ -421,7 +483,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "genes = bt.Gene.lookup()"
@@ -430,7 +496,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "genes.spo7"
@@ -439,7 +509,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# a gene set containing SPO7\n",
@@ -449,7 +523,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# artifacts that link to this feature set\n",
