--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -322,16 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We disable searching for related names to keep the output minimal\n",
-    "# ln.settings.creation.search_names = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
@@ -465,9 +455,7 @@
     "ln.save(compounds)\n",
     "\n",
     "# We found a synonym for jq1. Let's use the correct name for the metadata\n",
-    "drug_metadata.loc[:, \"perturbation\"] = pd.Categorical(\n",
-    "    drug_metadata[\"perturbation\"].cat.rename_categories({\"jq1\": wl.Compound.search(\"jq1\").one().name})\n",
-    ")"
+    "drug_metadata[\"perturbation\"].cat.categories = [wl.Compound.search(\"jq1\").one().name if cat == \"jq1\" else cat for cat in drug_metadata[\"perturbation\"].cat.categories]"
    ]
   },
   {
