Fix pandas warning properly
Signed-off-by: zethson <lukas.heumos@posteo.net>

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -455,7 +455,19 @@
     "ln.save(compounds)\n",
     "\n",
     "# We found a synonym for jq1. Let's use the correct name for the metadata\n",
-    "drug_metadata[\"perturbation\"].cat.categories = [wl.Compound.search(\"jq1\").one().name if cat == \"jq1\" else cat for cat in drug_metadata[\"perturbation\"].cat.categories]"
+    "drug_metadata = drug_metadata.assign(perturbation=lambda df: pd.Categorical(df[\"perturbation\"].cat.rename_categories({\"jq1\": wl.Compound.search(\"jq1\").one().name})))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drug_metadata = adata.obs[adata.obs[\"perturbation_type\"] == \"drug\"].copy()\n",
+    "drug_metadata[\"perturbation\"] = drug_metadata[\"perturbation\"].cat.rename_categories(\n",
+    "        {\"jq1\": wl.Compound.search(\"jq1\").one().name}\n",
+    "    )"
    ]
   },
   {
